Fix footer alignment.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -285,6 +285,11 @@ footer img {
     justify-content: center;
   }
 
+  footer img {
+    height: 1.5rem;
+    padding: 4rem 4rem 4rem 4rem;
+  }
+
   footer span {
     display: none;
   }
